# CosmiqBroadbandVoIPAPP

./: .gitignore  LICENSE  README.md  SETUP_IOS.md  SETUP_PUSH.md  THIRD_PARTY.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  g729_jni.c  g729_stub.c
android/app/src/main/kotlin/com/example/cosmiq_voip/: MainActivity.kt
android/app/src/main/kotlin/za/co/cosmiq/voip/: CosmiqSipManager.kt  G729Codec.kt  MainActivity.kt
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: account_info.dart  call_record.dart  server_config.dart  voicemail_message.dart
lib/screens/: dialer_screen.dart  history_screen.dart  incall_screen.dart  login_screen.dart  main_shell.dart  settings_screen.dart  splash_screen.dart  voicemail_screen.dart
lib/services/: app_state.dart  call_history_store.dart  credential_service.dart  portabilling_service.dart  push_service.dart  sip_service.dart
lib/theme/: cosmiq_theme.dart
push-gateway/: README.md  firebase.json
push-gateway/functions/: .gitignore  index.js  package.json
test/: widget_test.dart
